--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="wrapper">
-  <div class="header"><img class="img" src="./eisenhower-matrix.jpg">
+  <div class="header"><img class="img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
     <a class="more-inf" 
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
@@ -27,14 +27,14 @@
         <label class="task-label">Pay Bills</label>
         <input type="text" class="task">
         <button class="edit button">Edit</button>
-        <button class="delete button"><img src="./remove.svg" class="img-but"></button>
+        <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
       </li>
       <li class="task-name edit-mode">
         <input type="checkbox" class="checkbox">
         <label class="task-label">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit button">Save</button>
-        <button class="delete button"><img src="./remove.svg" class="img-but"></button>
+        <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
       </li>
     </ul>
     <h3 class="subtitle">Completed</h3>
@@ -44,7 +44,7 @@
         <label class="task-label">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit button">Edit</button>
-        <button class="delete button"><img src="./remove.svg" class="img-but"></button>
+        <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
       </li>
     </ul>
   </div>
