--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,46 +9,53 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
+
 <body class="wrapper">
-  <div class="header"><img class="img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
-    <a class="more-inf" 
-       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
-    <p id="section-add"><label for="new-task" class="subtitle" id="label-add">Add Item</label>
-    <div class="task-wrapper">
-      <input id="new-task" class="task" type="text">
-      <button class="button">Add</button>
-    </div>
-    </p>
-    <h3 class="subtitle">Todo</h3>
-    <ul id="incomp-tasks" class="ul">
-      <li class="task-name">
-        <input type="checkbox" class="checkbox">
-        <label class="task-label">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit button">Edit</button>
-        <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
-      </li>
-      <li class="task-name edit-mode">
-        <input type="checkbox" class="checkbox">
-        <label class="task-label">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit button">Save</button>
-        <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
-      </li>
-    </ul>
-    <h3 class="subtitle">Completed</h3>
-    <ul id="comp-tasks" class="ul">
-      <li class="task-name">
-        <input type="checkbox" class="checkbox" checked>
-        <label class="task-label">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit button">Edit</button>
-        <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
-      </li>
-    </ul>
-  </div>
+  <header class="header">
+    <img class="img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  </header>
+  <main class="main">
+    <section id="section-add">
+      <h3 class="subtitle" id="label-add">Add Item</h3>
+      <div class="task-wrapper">
+        <input id="new-task" class="task" type="text">
+        <button class="button">Add</button>
+      </div>
+    </section>
+    <section>
+      <h3 class="subtitle">Todo</h3>
+      <ul id="incomp-tasks" class="ul">
+        <li class="task-name">
+          <input type="checkbox" class="checkbox">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
+        </li>
+        <li class="task-name edit-mode">
+          <input type="checkbox" class="checkbox">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task">
+          <button class="edit button">Save</button>
+          <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3 class="subtitle">Completed</h3>
+      <ul id="comp-tasks" class="ul">
+        <li class="task-name">
+          <input type="checkbox" class="checkbox" checked>
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
+        </li>
+      </ul>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
+
 </html>
