--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
           <label class="task-label">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
+          <button class="delete button"><img src="./remove.svg" class="img-but" alt=""></button>
         </li>
         <li class="task-name edit-mode">
           <input type="checkbox" class="checkbox">
           <label class="task-label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit button">Save</button>
-          <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
+          <button class="delete button"><img src="./remove.svg" class="img-but" alt=""></button>
         </li>
       </ul>
     </section>
@@ -50,7 +50,7 @@
           <label class="task-label">See the Doctor</label>
           <input type="text" class="task">
           <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" class="img-but" alt="Delete image"></button>
+          <button class="delete button"><img src="./remove.svg" class="img-but" alt=""></button>
         </li>
       </ul>
     </section>
